<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_cur_confirmed_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cur_confirmed_count_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cl_confirmed_count"
        tools:layout_conversion_absoluteHeight="76dp"
        tools:layout_conversion_absoluteWidth="104dp">

        <TextView
            android:id="@+id/tv_cur_confirmed_count_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="42dp"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="33dp" />

        <TextView
            android:id="@+id/tv_cur_confirmed_count_increase_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_number"
            android:textColor="@color/curConfirmedTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_cur_confirmed_count_increase"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="42dp"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="33dp" />

        <TextView
            android:id="@+id/tv_cur_confirmed_count_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/curConfirmedTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cur_confirmed_count_increase_number"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="49dp"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="52dp" />

        <TextView
            android:id="@+id/tv_cur_confirmed_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cur_confirmed_count"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cur_confirmed_count_number"
            tools:layout_conversion_absoluteHeight="20dp"
            tools:layout_conversion_absoluteWidth="59dp"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="79dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_confirmed_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/confirmed_count_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cl_cur_confirmed_count"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="76dp"
        tools:layout_conversion_absoluteWidth="104dp">

        <TextView
            android:id="@+id/tv_confirmed_count_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="42dp"
            tools:layout_editor_absoluteX="221dp"
            tools:layout_editor_absoluteY="33dp" />

        <TextView
            android:id="@+id/tv_confirmed_count_increase_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_number"
            android:textColor="@color/confirmedTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_confirmed_count_increase"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="42dp"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="33dp" />

        <TextView
            android:id="@+id/tv_confirmed_count_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/confirmedTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_confirmed_count_increase_number"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="49dp"
            tools:layout_editor_absoluteX="238dp"
            tools:layout_editor_absoluteY="52dp" />

        <TextView
            android:id="@+id/tv_confirmed_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed_count"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_confirmed_count_number"
            tools:layout_conversion_absoluteHeight="20dp"
            tools:layout_conversion_absoluteWidth="59dp"
            tools:layout_editor_absoluteX="233dp"
            tools:layout_editor_absoluteY="79dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_cured_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cured_count_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="@+id/cl_confirmed_count"
        app:layout_constraintStart_toStartOf="@+id/cl_confirmed_count"
        app:layout_constraintTop_toTopOf="@+id/cl_death_count"
        tools:layout_conversion_absoluteHeight="76dp"
        tools:layout_conversion_absoluteWidth="104dp">

        <TextView
            android:id="@+id/tv_cured_count_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="42dp"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="119dp" />

        <TextView
            android:id="@+id/tv_cured_count_increase_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_number"
            android:textColor="@color/curedTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_cured_count_increase"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="42dp"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="119dp" />

        <TextView
            android:id="@+id/tv_cured_count_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/curedTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cured_count_increase_number"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="49dp"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="138dp" />

        <TextView
            android:id="@+id/tv_cured_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cured_count"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cured_count_number"
            tools:layout_conversion_absoluteHeight="20dp"
            tools:layout_conversion_absoluteWidth="59dp"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="165dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_death_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/death_count_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="@+id/cl_cur_confirmed_count"
        app:layout_constraintStart_toStartOf="@+id/cl_cur_confirmed_count"
        app:layout_constraintTop_toBottomOf="@+id/cl_cur_confirmed_count"
        tools:layout_conversion_absoluteHeight="76dp"
        tools:layout_conversion_absoluteWidth="104dp">

        <TextView
            android:id="@+id/tv_death_count_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="42dp"
            tools:layout_editor_absoluteX="221dp"
            tools:layout_editor_absoluteY="119dp" />

        <TextView
            android:id="@+id/tv_death_count_increase_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_number"
            android:textColor="@color/deathTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_death_count_increase"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="42dp"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="119dp" />

        <TextView
            android:id="@+id/tv_death_count_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/deathTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_death_count_increase_number"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="49dp"
            tools:layout_editor_absoluteX="238dp"
            tools:layout_editor_absoluteY="138dp" />

        <TextView
            android:id="@+id/tv_death_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/death_count"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_death_count_number"
            tools:layout_conversion_absoluteHeight="20dp"
            tools:layout_conversion_absoluteWidth="59dp"
            tools:layout_editor_absoluteX="233dp"
            tools:layout_editor_absoluteY="165dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_data_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_refresh_black_24dp"
        app:backgroundTint="#DAECF9FF"
        app:borderWidth="0dp"
        app:elevation="1dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
